新增商品还有图片第一个接口
