# server/api/v1/orderManager/gold_goods.go
@@ -2,19 +2,18 @@ package orderManager
 
 import (
 	"github.com/flipped-aurora/gin-vue-admin/server/global"
-    "github.com/flipped-aurora/gin-vue-admin/server/model/orderManager"
-    orderManagerReq "github.com/flipped-aurora/gin-vue-admin/server/model/orderManager/request"
-    "github.com/flipped-aurora/gin-vue-admin/server/model/common/response"
-    "github.com/flipped-aurora/gin-vue-admin/server/service"
-    "github.com/gin-gonic/gin"
-    "go.uber.org/zap"
+	"github.com/flipped-aurora/gin-vue-admin/server/model/common/response"
+	"github.com/flipped-aurora/gin-vue-admin/server/model/orderManager"
+	orderManagerReq "github.com/flipped-aurora/gin-vue-admin/server/model/orderManager/request"
+	"github.com/flipped-aurora/gin-vue-admin/server/service"
+	"github.com/gin-gonic/gin"
+	"go.uber.org/zap"
 )
 
 type GoldGoodsApi struct {
 }
 
 var goldGoodsService = service.ServiceGroupApp.OrderManagerServiceGroup.GoldGoodsService
-
 
 // CreateGoldGoods 创建goldGoods表
 // @Tags GoldGoods
@@ -34,7 +33,32 @@ func (goldGoodsApi *GoldGoodsApi) CreateGoldGoods(c *gin.Context) {
 	}
 
 	if err := goldGoodsService.CreateGoldGoods(&goldGoods); err != nil {
-        global.GVA_LOG.Error("创建失败!", zap.Error(err))
+		global.GVA_LOG.Error("创建失败!", zap.Error(err))
+		response.FailWithMessage("创建失败", c)
+	} else {
+		response.OkWithMessage("创建成功", c)
+	}
+}
+
+// AddGoldGoodsAndFiles 创建goldGoods表还有图片文件
+// @Tags GoldGoods
+// @Summary 创建goldGoods表还有图片文件
+// @Security ApiKeyAuth
+// @accept application/json
+// @Produce application/json
+// @Param data body orderManagerReq.AddGoldGoodsRequest true "创建goldGoods表还有图片文件"
+// @Success 200 {string} string "{"success":true,"data":{},"msg":"创建成功"}"
+// @Router /goldGoods/AddGoldGoodsAndFiles [post]
+func (goldGoodsApi *GoldGoodsApi) AddGoldGoodsAndFiles(c *gin.Context) {
+	var addGoldGoodsAndFiles orderManagerReq.AddGoldGoodsRequest
+	err := c.ShouldBindJSON(&addGoldGoodsAndFiles)
+	if err != nil {
+		response.FailWithMessage(err.Error(), c)
+		return
+	}
+
+	if err := goldGoodsService.AddGoldGoodsAndFiles(&addGoldGoodsAndFiles); err != nil {
+		global.GVA_LOG.Error("创建失败!", zap.Error(err))
 		response.FailWithMessage("创建失败", c)
 	} else {
 		response.OkWithMessage("创建成功", c)
@@ -53,7 +77,7 @@ func (goldGoodsApi *GoldGoodsApi) CreateGoldGoods(c *gin.Context) {
 func (goldGoodsApi *GoldGoodsApi) DeleteGoldGoods(c *gin.Context) {
 	id := c.Query("ID")
 	if err := goldGoodsService.DeleteGoldGoods(id); err != nil {
-        global.GVA_LOG.Error("删除失败!", zap.Error(err))
+		global.GVA_LOG.Error("删除失败!", zap.Error(err))
 		response.FailWithMessage("删除失败", c)
 	} else {
 		response.OkWithMessage("删除成功", c)
@@ -72,7 +96,7 @@ func (goldGoodsApi *GoldGoodsApi) DeleteGoldGoods(c *gin.Context) {
 func (goldGoodsApi *GoldGoodsApi) DeleteGoldGoodsByIds(c *gin.Context) {
 	ids := c.QueryArray("ids[]")
 	if err := goldGoodsService.DeleteGoldGoodsByIds(ids); err != nil {
-        global.GVA_LOG.Error("批量删除失败!", zap.Error(err))
+		global.GVA_LOG.Error("批量删除失败!", zap.Error(err))
 		response.FailWithMessage("批量删除失败", c)
 	} else {
 		response.OkWithMessage("批量删除成功", c)
@@ -97,7 +121,7 @@ func (goldGoodsApi *GoldGoodsApi) UpdateGoldGoods(c *gin.Context) {
 	}
 
 	if err := goldGoodsService.UpdateGoldGoods(goldGoods); err != nil {
-        global.GVA_LOG.Error("更新失败!", zap.Error(err))
+		global.GVA_LOG.Error("更新失败!", zap.Error(err))
 		response.FailWithMessage("更新失败", c)
 	} else {
 		response.OkWithMessage("更新成功", c)
@@ -116,7 +140,7 @@ func (goldGoodsApi *GoldGoodsApi) UpdateGoldGoods(c *gin.Context) {
 func (goldGoodsApi *GoldGoodsApi) FindGoldGoods(c *gin.Context) {
 	id := c.Query("ID")
 	if regoldGoods, err := goldGoodsService.GetGoldGoods(id); err != nil {
-        global.GVA_LOG.Error("查询失败!", zap.Error(err))
+		global.GVA_LOG.Error("查询失败!", zap.Error(err))
 		response.FailWithMessage("查询失败", c)
 	} else {
 		response.OkWithData(gin.H{"regoldGoods": regoldGoods}, c)
@@ -140,14 +164,14 @@ func (goldGoodsApi *GoldGoodsApi) GetGoldGoodsList(c *gin.Context) {
 		return
 	}
 	if list, total, err := goldGoodsService.GetGoldGoodsInfoList(pageInfo); err != nil {
-	    global.GVA_LOG.Error("获取失败!", zap.Error(err))
-        response.FailWithMessage("获取失败", c)
-    } else {
-        response.OkWithDetailed(response.PageResult{
-            List:     list,
-            Total:    total,
-            Page:     pageInfo.Page,
-            PageSize: pageInfo.PageSize,
-        }, "获取成功", c)
-    }
+		global.GVA_LOG.Error("获取失败!", zap.Error(err))
+		response.FailWithMessage("获取失败", c)
+	} else {
+		response.OkWithDetailed(response.PageResult{
+			List:     list,
+			Total:    total,
+			Page:     pageInfo.Page,
+			PageSize: pageInfo.PageSize,
+		}, "获取成功", c)
+	}
 }
