# server/docs/swagger.yaml
@@ -828,6 +828,56 @@ definitions:
         description: 更新时间
         type: string
     type: object
+  request.AddGoldGoodsFileRequest:
+    properties:
+      ID:
+        description: 主键ID
+        type: integer
+      createId:
+        description: 创建人id
+        type: integer
+      createTime:
+        description: 创建时间
+        type: string
+      fileName:
+        description: 文件名
+        type: string
+      filePath:
+        description: 文件路径
+        type: string
+      fileType:
+        description: 文件类型
+        type: boolean
+      goodsId:
+        description: 商品Id
+        type: integer
+      updateId:
+        description: 更新人Id
+        type: integer
+      updateTime:
+        description: 更新时间
+        type: string
+    type: object
+  request.AddGoldGoodsRequest:
+    properties:
+      ID:
+        description: 主键ID
+        type: integer
+      goldGoodsFileList:
+        description: 上传文件路径
+        items:
+          $ref: '#/definitions/request.AddGoldGoodsFileRequest'
+        type: array
+      goodsName:
+        description: 商品名称
+        type: string
+      goodsPrice:
+        description: 商品价格
+        type: integer
+      goodsTypeId:
+        description: 商品分类Id
+        type: integer
+    type: object
   request.AddMenuAuthorityInfo:
     properties:
       authorityId:
@@ -3078,6 +3128,29 @@ paths:
       summary: 上传文件示例
       tags:
       - ExaFileUploadAndDownload
+  /goldGoods/AddGoldGoodsAndFiles:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 创建goldGoods表还有图片文件
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.AddGoldGoodsRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"创建成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 创建goldGoods表还有图片文件
+      tags:
+      - GoldGoods
   /goldGoods/createGoldGoods:
     post:
       consumes:
